link changes to new videos

--- a/index.html
+++ b/index.html
@@ -373,8 +373,8 @@
       <ul>
         <li><a href="https://ts.vcu.edu/askit/video-services/video-conferencing-support/zoom-desktop-conferencing/">Zoom Pro at VCU</a></li>
         <li><a href="https://docs.google.com/document/d/1nmzTUPaVWGDZD2gjTPRGOlDBXWsJ89BPQ8MS0u-51fg/edit?ts=5e6a9e9e">Getting Started with Zoom at VCU</a></li>
-        <li><a href="https://support.zoom.us/hc/en-us/articles/115004794983-Automatically-Transcribe-Cloud-Recordings-">Creating a Zoom transcript</a></li>
-        <li><a href="https://www.youtube.com/watch?v=09C18oSB3uk&feature=youtu.be">Tips for making good videos and screencasts</a></li>
+        <li><a href="https://youtu.be/aOBMMkOuoK8">Quick & Dirty Tips for Online Teaching: Webcams</a></li>
+         <li><a href="https://support.zoom.us/hc/en-us/articles/115004794983-Automatically-Transcribe-Cloud-Recordings-">Creating a Zoom transcript</a></li>
       </ul>
     </div>
   </div>
@@ -412,7 +412,7 @@
       <h4>Resources</h4>
       <ul>
         <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/kaltura/kaltura-capture/">Kaltura Capture at VCU</a></li>
-        <li><a href="https://www.youtube.com/watch?v=09C18oSB3uk&feature=youtu.be">Tips for making good videos and screencasts</a></li>
+        <li><a href="https://youtu.be/aOBMMkOuoK8">Quick & Dirty Tips for Online Teaching: Webcams</a></li>
         <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/kaltura/captioning-and-editing-in-kaltura/">Adding transcripts to Kaltura</a></li>      
       </ul>
     </div>
@@ -657,7 +657,7 @@
               <li><a href="https://rampages.us/usingvideo2/">Using Video for Teaching - Part 2</a></li>
               <li><a href="https://rampages.us/accessiblecontent/">Tips on Creating Accessible Content</a></li> 
               <li><a href="https://rampages.us/googlesolutionspartone/">Google Solutions</a></li> 
-              <li><a href="https://rampages.us/discussions1/">Online Discussions</a></li> 
+              <li><a href="https://rampages.us/discussions1/">Online Discussions</a> or <a href="https://youtu.be/RVEhXs98sik">the quick video version</a></li> 
               <li><a href="https://rampages.us/voicethread/">Engaging Discussions with VoiceThread</a></li> 
               <li><a href="https://rampages.us/digitalsimulations1/">Digital Simulations - Part 1 </a></li> 
               <li><a href="https://rampages.us/digitalsimulations2/">Digital Simulations - Part 2 </a></li> 
@@ -713,6 +713,7 @@
         <p>
           Online delivery of materials presents a whole new array of potential barriers. Please make every effort to select videos or content that are captioned or include transcripts. If you would like additional information about how to select or create accessible online materials, please contact <a href="mailto:saeo@vcu.edu">SAEO</a> or <a href="mailto:acadsuccess@vcu.edu">DAS</a>.
         </p>
+        <p>Here's a video for <a href="https://youtu.be/DzKKnSXV4M4">Quick & Dirty Tips for Online Teaching: Accessibility.</a></p>
       </div>
       <div class="col-md-8">
         <h3 id="policy">Policies:</h3>
