--- a/students/index.html
+++ b/students/index.html
@@ -151,7 +151,7 @@
                   <p>For our veterans who need a laptop computer a local veteran support organization, <a href="https://techfortroops.org/">Tech for Troops</a>, provides FREE laptops to veterans who are going back to school.</p>
                 </div>
                 <div class="col-md-8">
-                  <h3>Internet Access Options</h3>
+                  <h3 id="internet">Internet Access Options</h3>
 
                   <p>Wifi/internet access:  employees and students can add “hot spots” to their wireless cellphone plans or access VCU SafeNet while being in your car in/around the VCU campuses.  </p>  
                   <p>A number of companies are offering both reduced cost and increased bandwidth options.</p>   <ul>  
@@ -217,18 +217,7 @@
                     </ul>
                   </div>
                 <!--end inclusive -->
-                 <div class="col-md-8">
-                    <h3 id="policy">Policies:</h3>
-                    <ul>
-                          <li><a href="http://bulletin.vcu.edu/about/ferpa/">Rights of Students under FERPA</a></li>
-                          <li><a href="https://policy.vcu.edu/universitywide-policies/policies/computer-and-network-resources-use.html">Computer &amp; Network Resources Use</a></li>
-                          <li><a href="https://conduct.students.vcu.edu/student-code-of-conduct/">Student Code of Conduct</a></li>
-                          <li><a href="https://conduct.students.vcu.edu//vcu-honor-system/">VCU Honor Code</a></li>
-                          <li><a href="http://bulletin.vcu.edu/academic-regs/university/attendance/">Attendance</a></li>
-                        <li><a href="http://bulletin.vcu.edu/academic-regs/ugrad/medical-leave-absence/">Medical Leave of Absence </a>(undergraduate students) and <a href="http://bulletin.vcu.edu/academic-regs/university/leave-of-absence/">Leave of Absence</a> (Graduate and Professional students only)</li>
-                        <li><a href="https://rar.vcu.edu/media/strategic-enrollment-management/rar/docs/IncompleteGrade1.pdf">Incomplete Grade Form (requesting incomplete grade)</a></li>
-                    </ul>
-                  </div>
+                
                   <div id="footer">
                     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Keep Teaching</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://altlab.vcu.edu/rapid-response/" property="cc:attributionName" rel="cc:attributionURL">VCU Rapid Transition Taskforce</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
                   </div>
