meet up changes

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <div class="col-md-5">
       <div class="description">
         <h4>Description</h4>
-        <p>Email may be the place you feel most comfortable. Consider building a mailing list per class to help manage your student addresses. Larger classes will need a <a href="https://www.google.com/url?q=https://collaborate.vcu.edu/apps/groups/&sa=D&ust=1584043996087000&usg=AFQjCNGO64QZLz1lYI6pIx51UO7qbZ09BQ">Google Group</a> to avoid being flagged as spam. Additional information on getting students emails, creating email lists, and general email productivity tips can be found under resources. </p>
+        <p>Email may be the place you feel most comfortable. Consider building a mailing list per class to help manage your student addresses. Larger classes will need a <a href="https://collaborate.vcu.edu/how-do-i/request-a-google-group/">Google Group</a> to avoid being flagged as spam. Additional information on getting students emails, creating email lists, and general email productivity tips can be found under resources. </p>
         <p><a href=""></a></p>
       </div>
     </div>
@@ -414,6 +414,46 @@
         <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/kaltura/kaltura-capture/">Kaltura Capture at VCU</a></li>
         <li><a href="https://youtu.be/aOBMMkOuoK8">Quick & Dirty Tips for Online Teaching: Webcams</a></li>
         <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/kaltura/captioning-and-editing-in-kaltura/">Adding transcripts to Kaltura</a></li>      
+      </ul>
+    </div>
+  </div>
+  <!--end kaltura row-->
+    <!--return block-->
+  <div class="return-block">
+        <div>
+          <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
+        </div>
+        <div>
+          <a href="#top"><span class="up">&uarr;</span>return to top</a>
+        </div>
+  </div>
+  <!--end return block-->
+  <!--google meet row-->
+  <div class="row gmeet single-app-row" id="gmeet">
+    <div class="col-md-12">
+      <h3>Google Meet</h3>
+
+    </div>
+    <div class="col-md-5">
+      <div class="description">
+        <h4>Description</h4>
+        <p>Hangouts Meet is a video meeting option from Google that makes scheduling and joining a meeting easier. Whether you’re using a computer, an Android, or iOS device, you can access meetings in one place.</p>        
+      </div>
+    </div>
+    <div class="col-md-4 restrictions">
+      <h4>Details</h4>
+      <ul>
+        <li>Supports up to 250 participants</li>
+        <li>Unlimited 1:1 meetings</li>
+      </ul>
+    </div>
+    <div class="col-md-3">
+      <h4>Resources</h4>
+      <ul>
+        <li><a href="https://collaborate.vcu.edu/apps/hangouts-meet/">Meets at VCU</a></li>
+        <li><a href="https://support.google.com/a/users/answer/9282720?hl=en">Getting started with Google Meet</a></li>
+        <li><a href="https://support.google.com/a/users/answer/9308681?&ref_topic=9545472">Record a meeting</a></li>
+        <li><a href="https://support.google.com/meet/answer/9300310?co=GENIE.Platform%3DAndroid&hl=en">Enable live captioning</a></li>      
       </ul>
     </div>
   </div>
