add student zoom guides

--- a/students/index.html
+++ b/students/index.html
@@ -125,8 +125,9 @@
                     </div>
                     <div class="col-md-3">
                       <h4>Resources</h4>
-                      <ul>
-                        <li><a href="https://ts.vcu.edu/askit/video-services/video-conferencing-support/zoom-desktop-conferencing/">Zoom at VCU</a></li>                       
+                      <ul>                        
+                        <li><a href="https://ts.vcu.edu/askit/video-services/video-conferencing-support/zoom-desktop-conferencing/">Zoom at VCU</a></li> 
+                        <li><a href="https://drive.google.com/drive/folders/1yR3OuWKlc-AArmTJMdF_C4Ixj6RtM40M">Zoom guides for students</a></li>                      
                         <li><a href="https://www.youtube.com/watch?v=09C18oSB3uk&feature=youtu.be">Tips for making good videos and screencasts</a></li>
                        <!--  <li><a href="https://support.zoom.us/hc/en-us/articles/115004794983-Automatically-Transcribe-Cloud-Recordings-">Creating a Zoom transcript</a></li> -->
                       </ul>
