--- a/students/index.html
+++ b/students/index.html
@@ -49,7 +49,7 @@
                                                 
                 </div>                
             </div>
-            <div class="row app-row" id="topic">
+            <div class="row app-row" id="informed">
                 <div class="col-md-12"><h1>Stay Informed</h1></div>
                 <div class="col-md-12">
                   <h2>Course Communications</h2>
@@ -134,7 +134,7 @@
                     </div>
                   </div>
                   <!--end zoom row-->
-                <div class="col-md-12">
+                <div class="col-md-12" id="tech-support">
                   <h2>Technology Support & Resources</h2>
                 </div>
                 <div class="col-md-8">
@@ -151,7 +151,7 @@
                   <h5>VCU Military Services</h5>
                   <p>For our veterans who need a laptop computer a local veteran support organization, <a href="https://techfortroops.org/">Tech for Troops</a>, provides FREE laptops to veterans who are going back to school.</p>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8" id="wifi">
                   <h3 id="internet">Internet Access Options</h3>
 
                   <p>Wifi/internet access:  employees and students can add “hot spots” to their wireless cellphone plans or access VCU SafeNet while being in your car in/around the VCU campuses.  </p>  
@@ -165,7 +165,7 @@
                     <li><a href="https://www.t-mobile.com/news/t-mobile-update-on-covid-19-response?fbclid=IwAR1fqkvzkYkamnGoghKwqaYfNjFMQQ4g5EXaOLsgDX5fSYCeNBRtX5Ryk5Y" target="_blank" rel="noopener nofollow" data-lynx-mode="asynclazy" data-lynx-uri="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.t-mobile.com%2Fnews%2Ft-mobile-update-on-covid-19-response%3Ffbclid%3DIwAR1fqkvzkYkamnGoghKwqaYfNjFMQQ4g5EXaOLsgDX5fSYCeNBRtX5Ryk5Y&amp;h=AT3bA0A7Fmw4veqNbb8YHviFxCx19YZvvj19pc2tULDOSXWSr4maEmvcoucZh7HTl5T6eswTl0lGhYVVzmoQMVJmXFC5FXTZJHf0ztFpPrSxE2ffdRDF3qoUc1EMM81_eDPW-hMEJGiTqII-Yewo8Ks">T-Mobile COVID-19 response</a>: follows FCC agreement, plus unlimited data to existing customers, and, coming soon, will allow all handsets to enable hot-spots for 60 days at no extra charge (I expect others will follow).</li>
                   </ul>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8" id="tech-support">
                   <h3>Technology Support</h3>
                   <ul>
                     <li><a href="https://ts.vcu.edu/it-support-center/">IT Support (chat, email, phone)</a></li>
@@ -173,7 +173,7 @@
                     <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/blackboard-elearning/">Blackboard help</a> - If you can not find the answer to your questions from the Blackboard Help links on this page, please email <a href="mailto:blackboard@vcu.edu">blackboard@vcu.edu</a>. A support staff member will then contact you as soon as possible.</li>
                   </ul>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8" id="academic-support">
                   <h3>Academic Support</h3>
                   <ul>
                     <li><a href="https://clc.vcu.edu/forms/ditutoring/">Tutoring: </a>Tutoring services will continue to be offered but in a Zoom format. Students will be sent a Zoom link by their tutor to join the session.  Students will be given information about their sessions via email beforehand.</li>
@@ -182,11 +182,11 @@
                     <li><a href="https://academicadvising.vcu.edu/">Academic Advising: </a>Your VCU academic advisor will continue to make regular appointments for advising using the Navigate system (available through your <a href="http://vcu.campus.eab.com/">Navigate app</a> or through <a href="https://my.vcu.edu/" title="">eServices/MyVCU</a>).  Advising will be provided either by phone, email, Google Hangout/Chat, or Zoom.</li>
                   </ul>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8" id="accommodations">
                   <h3>Student Accommodations</h3>
                   <p>Your professors are making every effort to address accommodations proactively. For students with approved accommodations, there may be some changes to how these are implemented. This will become a collaborative process between you , your professors, and the Office of <a href="https://saeo.vcu.edu/">Student Accessibility and Educational Opportunity</a> (Monroe Park Campus) and the <a href="https://das.vcu.edu/">Division for Academic Success</a> (Health Science programs). If you have any concerns about accessing or participating in your course in a remote/online format, share them with your instructor. This will allow them to proactively use that information in the re-design of their course.</p>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8" id="policies">
                   <h3>Policies</h3>
                   <ul>
                         <li><a href="https://policy.vcu.edu/universitywide-policies/policies/computer-and-network-resources-use.html">Computer &amp; Network Resources Use</a></li>
@@ -197,7 +197,7 @@
                         <li> <a href="https://rar.vcu.edu/media/strategic-enrollment-management/rar/docs/IncompleteGrade1.pdf">Incomplete Grade Form</a> (requesting incomplete grade)</li>
                     </ul>
                 </div>
-                 <div class="col-md-8">
+                 <div class="col-md-8" id="labs">
                   <h3>Labs & Outside Placements</h3>
                       <ul>
                         <li>For courses with labs as a component of the course, please speak with your professor about the plan for lab work in a remote or online format. </li>
@@ -206,7 +206,7 @@
                     </ul>
                  </div>
                   <!--row inclusive excellence-->
-                  <div class="col-md-8">
+                  <div class="col-md-8" id="inclusive">
                     <h3 id="inclusive">Statement from VCU’s Inclusive Excellence:</h3>
                     <p>Virginia Commonwealth University remains committed to promoting a culture of inclusion for all its employees, patients and students. Discrimination or discriminatory harassment is unlawful. It is also harmful to the well-being of our university community. We are aware of the news reports regarding bullying, harassment and stereotyping of Chinese Americans and persons of Asian descent in light of the coronavirus (COVID-19). There is no place for this sort of behavior, especially not at VCU. Our university values, specifically those related to diversity and inclusion, have withstood many difficult situations and trying times, and they will not falter now. Please be assured that VCU will make every effort to prevent the occurence of unlawful discrimination and, if necessary, take prompt and appropriate action to remedy and prevent its reoccurence. Every member of our community is asked to:</p>
                     <ul>
