--- a/students/index.html
+++ b/students/index.html
@@ -15,7 +15,7 @@
     <body>
       <!--this is an evolving document - it is only a two days old - be kind to it and the intent of the authors-->
         <div class="container content-primary__content" id="keep-on">
-          <div class="row" id="intro">
+          <div class="row" id="top">
                 <div class="col-md-12">
                      <h1>Keep on Learning</h1>
                      <p>Sometimes the unexpected happens. When it does, VCU will be prepared to keep on teaching and keep on learning. Were we to have a blizzard or some other surprise event, no doubt we will eventually experience a moment where all in-person courses will need to transition to a remote format. Don’t worry! Your professors will do everything they can to make sure your course stays on track.</p>
@@ -49,6 +49,32 @@
                                                 
                 </div>                
             </div>
+            <!--row nav-->
+            <div class="row" id="tools">
+              <div class="col-md-12">
+                <h2>What are you trying to do online?</h2>
+              </div>
+              <div class="col-md-4"><a class="app-nav" href="#informed">
+                  Stay Informed
+                </a></div>
+              <div class="col-md-4"><a class="app-nav" href="#group">
+                  Group Work
+                </a></div>
+                <div class="col-md-4"><a class="app-nav" href="#tech-support">
+                  Tech Support
+                </a></div>
+              <div class="col-md-4"><a class="app-nav" href="#wifi">
+                  Internet Access
+                </a></div>
+              <div class="col-md-4"><a class="app-nav" href="#academic-support">
+                  Academic Support
+                </a></div>
+              <div class="col-md-4"><a class="app-nav" href="#policies">
+                  Policies
+                </a></div>
+
+            </div>
+            <!--end nav-->
             <div class="row app-row" id="informed">
                 <div class="col-md-12"><h1>Stay Informed</h1></div>
                 <div class="col-md-12">
@@ -72,7 +98,7 @@
                 <div class="col-md-8">
                   <p>There is a lot of bad information out there on social media. We want you to stay informed with truly accurate information on the current COVID-19 situation. President Rao has been providing regular updates via email and on the <a href="https://blogs.vcu.edu/covid-19-coronavirus/">VCU COVID-19 website</a> dedicated to keeping us all informed. </p>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8" id="group">
                   <h2>Working Together on Group Projects</h2>
                   <p>Just because you're not in the same room doesn't mean you can't collaborate. A variety of tools open up options to keep working with other students and faculty</p>
                 </div>
@@ -165,7 +191,7 @@
                     <li><a href="https://www.t-mobile.com/news/t-mobile-update-on-covid-19-response?fbclid=IwAR1fqkvzkYkamnGoghKwqaYfNjFMQQ4g5EXaOLsgDX5fSYCeNBRtX5Ryk5Y" target="_blank" rel="noopener nofollow" data-lynx-mode="asynclazy" data-lynx-uri="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.t-mobile.com%2Fnews%2Ft-mobile-update-on-covid-19-response%3Ffbclid%3DIwAR1fqkvzkYkamnGoghKwqaYfNjFMQQ4g5EXaOLsgDX5fSYCeNBRtX5Ryk5Y&amp;h=AT3bA0A7Fmw4veqNbb8YHviFxCx19YZvvj19pc2tULDOSXWSr4maEmvcoucZh7HTl5T6eswTl0lGhYVVzmoQMVJmXFC5FXTZJHf0ztFpPrSxE2ffdRDF3qoUc1EMM81_eDPW-hMEJGiTqII-Yewo8Ks">T-Mobile COVID-19 response</a>: follows FCC agreement, plus unlimited data to existing customers, and, coming soon, will allow all handsets to enable hot-spots for 60 days at no extra charge (I expect others will follow).</li>
                   </ul>
                 </div>
-                <div class="col-md-8" id="tech-support">
+                <div class="col-md-8">
                   <h3>Technology Support</h3>
                   <ul>
                     <li><a href="https://ts.vcu.edu/it-support-center/">IT Support (chat, email, phone)</a></li>
