--- a/students/index.html
+++ b/students/index.html
@@ -52,25 +52,31 @@
             <!--row nav-->
             <div class="row" id="tools">
               <div class="col-md-12">
-                <h2>What are you trying to do online?</h2>
+                <h2>What do you want to know more about?</h2>
               </div>
-              <div class="col-md-4"><a class="app-nav" href="#informed">
-                  Stay Informed
+              <div class="col-md-3"><a class="app-nav" href="#informed">
+                  Staying Informed
                 </a></div>
-              <div class="col-md-4"><a class="app-nav" href="#group">
+              <div class="col-md-3"><a class="app-nav" href="#group">
                   Group Work
                 </a></div>
-                <div class="col-md-4"><a class="app-nav" href="#tech-support">
+                <div class="col-md-3"><a class="app-nav" href="#tech-support">
                   Tech Support
                 </a></div>
-              <div class="col-md-4"><a class="app-nav" href="#wifi">
+              <div class="col-md-3"><a class="app-nav" href="#wifi">
                   Internet Access
                 </a></div>
-              <div class="col-md-4"><a class="app-nav" href="#academic-support">
+              <div class="col-md-3"><a class="app-nav" href="#academic-support">
                   Academic Support
                 </a></div>
-              <div class="col-md-4"><a class="app-nav" href="#policies">
+              <div class="col-md-3"><a class="app-nav" href="#policies">
                   Policies
+                </a></div>
+                <div class="col-md-3"><a class="app-nav" href="#accommodations">
+                  Accommodations
+                </a></div>
+                <div class="col-md-3"><a class="app-nav" href="#labs">
+                  Labs/Placements
                 </a></div>
 
             </div>
@@ -92,6 +98,16 @@
                       It is the responsibility of the student to monitor their VCU email, Blackboard course site, and if used by the instructor, Google Classroom to learn about updates and next steps to completing their classes on-line/remotely. Some announcements may go out to students through Navigate (available through your <a href="http://vcu.campus.eab.com/">Navigate app</a> or through <a href="https://my.vcu.edu/">eServices/MyVCU</a>).
                   </p>
                 </div>
+                 <!--return block-->
+                <div class="return-block">
+                      <div>
+                        <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
+                      </div>
+                      <div>
+                        <a href="#top"><span class="up">&uarr;</span>return to top</a>
+                      </div>
+                </div>
+                <!--end return block-->
                 <div class="col-md-12">
                   <h2>Accurate and updated info on COVID-19</h2>
                 </div>
