--- a/students/index.html
+++ b/students/index.html
@@ -101,7 +101,7 @@
                  <!--return block-->
                 <div class="return-block">
                       <div>
-                        <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
+                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
                       </div>
                       <div>
                         <a href="#top"><span class="up">&uarr;</span>return to top</a>
@@ -119,6 +119,16 @@
                   <p>Just because you're not in the same room doesn't mean you can't collaborate. A variety of tools open up options to keep working with other students and faculty</p>
                 </div>
             </div>
+             <!--return block-->
+                <div class="return-block">
+                      <div>
+                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                      </div>
+                      <div>
+                        <a href="#top"><span class="up">&uarr;</span>return to top</a>
+                      </div>
+                </div>
+                <!--end return block-->
                 <!--gsuite start-->
                 <div class="row single-app-row" id="gsuite">
                     <div class="col-md-12">
@@ -147,6 +157,16 @@
                     </div>
                   </div>
                   <!--gsuite end-->
+                   <!--return block-->
+                <div class="return-block">
+                      <div>
+                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                      </div>
+                      <div>
+                        <a href="#top"><span class="up">&uarr;</span>return to top</a>
+                      </div>
+                </div>
+                <!--end return block-->
                    <!--zoom row-->
                   <div class="row single-app-row" id="zoom">
                     <div class="col-md-12">
@@ -176,6 +196,16 @@
                     </div>
                   </div>
                   <!--end zoom row-->
+                   <!--return block-->
+                <div class="return-block">
+                      <div>
+                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                      </div>
+                      <div>
+                        <a href="#top"><span class="up">&uarr;</span>return to top</a>
+                      </div>
+                </div>
+                <!--end return block-->
                 <div class="col-md-12" id="tech-support">
                   <h2>Technology Support & Resources</h2>
                 </div>
@@ -193,6 +223,16 @@
                   <h5>VCU Military Services</h5>
                   <p>For our veterans who need a laptop computer a local veteran support organization, <a href="https://techfortroops.org/">Tech for Troops</a>, provides FREE laptops to veterans who are going back to school.</p>
                 </div>
+                 <!--return block-->
+                <div class="return-block">
+                      <div>
+                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                      </div>
+                      <div>
+                        <a href="#top"><span class="up">&uarr;</span>return to top</a>
+                      </div>
+                </div>
+                <!--end return block-->
                 <div class="col-md-8" id="wifi">
                   <h3 id="internet">Internet Access Options</h3>
 
@@ -207,6 +247,16 @@
                     <li><a href="https://www.t-mobile.com/news/t-mobile-update-on-covid-19-response?fbclid=IwAR1fqkvzkYkamnGoghKwqaYfNjFMQQ4g5EXaOLsgDX5fSYCeNBRtX5Ryk5Y" target="_blank" rel="noopener nofollow" data-lynx-mode="asynclazy" data-lynx-uri="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.t-mobile.com%2Fnews%2Ft-mobile-update-on-covid-19-response%3Ffbclid%3DIwAR1fqkvzkYkamnGoghKwqaYfNjFMQQ4g5EXaOLsgDX5fSYCeNBRtX5Ryk5Y&amp;h=AT3bA0A7Fmw4veqNbb8YHviFxCx19YZvvj19pc2tULDOSXWSr4maEmvcoucZh7HTl5T6eswTl0lGhYVVzmoQMVJmXFC5FXTZJHf0ztFpPrSxE2ffdRDF3qoUc1EMM81_eDPW-hMEJGiTqII-Yewo8Ks">T-Mobile COVID-19 response</a>: follows FCC agreement, plus unlimited data to existing customers, and, coming soon, will allow all handsets to enable hot-spots for 60 days at no extra charge (I expect others will follow).</li>
                   </ul>
                 </div>
+                 <!--return block-->
+                <div class="return-block">
+                      <div>
+                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                      </div>
+                      <div>
+                        <a href="#top"><span class="up">&uarr;</span>return to top</a>
+                      </div>
+                </div>
+                <!--end return block-->
                 <div class="col-md-8">
                   <h3>Technology Support</h3>
                   <ul>
@@ -215,6 +265,16 @@
                     <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/blackboard-elearning/">Blackboard help</a> - If you can not find the answer to your questions from the Blackboard Help links on this page, please email <a href="mailto:blackboard@vcu.edu">blackboard@vcu.edu</a>. A support staff member will then contact you as soon as possible.</li>
                   </ul>
                 </div>
+                 <!--return block-->
+                <div class="return-block">
+                      <div>
+                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                      </div>
+                      <div>
+                        <a href="#top"><span class="up">&uarr;</span>return to top</a>
+                      </div>
+                </div>
+                <!--end return block-->
                 <div class="col-md-8" id="academic-support">
                   <h3>Academic Support</h3>
                   <ul>
@@ -224,10 +284,30 @@
                     <li><a href="https://academicadvising.vcu.edu/">Academic Advising: </a>Your VCU academic advisor will continue to make regular appointments for advising using the Navigate system (available through your <a href="http://vcu.campus.eab.com/">Navigate app</a> or through <a href="https://my.vcu.edu/" title="">eServices/MyVCU</a>).  Advising will be provided either by phone, email, Google Hangout/Chat, or Zoom.</li>
                   </ul>
                 </div>
+                 <!--return block-->
+                <div class="return-block">
+                      <div>
+                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                      </div>
+                      <div>
+                        <a href="#top"><span class="up">&uarr;</span>return to top</a>
+                      </div>
+                </div>
+                <!--end return block-->
                 <div class="col-md-8" id="accommodations">
                   <h3>Student Accommodations</h3>
                   <p>Your professors are making every effort to address accommodations proactively. For students with approved accommodations, there may be some changes to how these are implemented. This will become a collaborative process between you , your professors, and the Office of <a href="https://saeo.vcu.edu/">Student Accessibility and Educational Opportunity</a> (Monroe Park Campus) and the <a href="https://das.vcu.edu/">Division for Academic Success</a> (Health Science programs). If you have any concerns about accessing or participating in your course in a remote/online format, share them with your instructor. This will allow them to proactively use that information in the re-design of their course.</p>
                 </div>
+                 <!--return block-->
+                <div class="return-block">
+                      <div>
+                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                      </div>
+                      <div>
+                        <a href="#top"><span class="up">&uarr;</span>return to top</a>
+                      </div>
+                </div>
+                <!--end return block-->
                 <div class="col-md-8" id="policies">
                   <h3>Policies</h3>
                   <ul>
@@ -239,6 +319,16 @@
                         <li> <a href="https://rar.vcu.edu/media/strategic-enrollment-management/rar/docs/IncompleteGrade1.pdf">Incomplete Grade Form</a> (requesting incomplete grade)</li>
                     </ul>
                 </div>
+                 <!--return block-->
+                <div class="return-block">
+                      <div>
+                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                      </div>
+                      <div>
+                        <a href="#top"><span class="up">&uarr;</span>return to top</a>
+                      </div>
+                </div>
+                <!--end return block-->
                  <div class="col-md-8" id="labs">
                   <h3>Labs & Outside Placements</h3>
                       <ul>
@@ -247,6 +337,16 @@
                         <li>For students who are currently on internships, practica, placements, field experiences, or any activities that involve off campus partners, please communicate with your professor, program coordinator, or department chair about the plan of action. They can help you determine the path forward.</li>                    
                     </ul>
                  </div>
+                  <!--return block-->
+                <div class="return-block">
+                      <div>
+                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                      </div>
+                      <div>
+                        <a href="#top"><span class="up">&uarr;</span>return to top</a>
+                      </div>
+                </div>
+                <!--end return block-->
                   <!--row inclusive excellence-->
                   <div class="col-md-8" id="inclusive">
                     <h3 id="inclusive">Statement from VCU’s Inclusive Excellence:</h3>
@@ -260,6 +360,16 @@
                     </ul>
                   </div>
                 <!--end inclusive -->
+                 <!--return block-->
+                <div class="return-block">
+                      <div>
+                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                      </div>
+                      <div>
+                        <a href="#top"><span class="up">&uarr;</span>return to top</a>
+                      </div>
+                </div>
+                <!--end return block-->
                 
                   <div id="footer">
                     <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Keep Teaching</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://altlab.vcu.edu/rapid-response/" property="cc:attributionName" rel="cc:attributionURL">VCU Rapid Transition Taskforce</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
